@@ -2,13 +2,17 @@ package com.prgrmsfinal.skypedia.planShare.service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+import org.springframework.http.HttpStatus;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.ResponseStatus;
 
-import com.prgrmsfinal.skypedia.planShare.dto.RegionDTO;
+import com.prgrmsfinal.skypedia.planShare.dto.RegionRequestDTO;
+import com.prgrmsfinal.skypedia.planShare.dto.RegionResponseDTO;
 import com.prgrmsfinal.skypedia.planShare.entity.Region;
 import com.prgrmsfinal.skypedia.planShare.exception.PlanError;
+import com.prgrmsfinal.skypedia.planShare.mapper.RegionMapper;
 import com.prgrmsfinal.skypedia.planShare.repository.RegionRepository;
 
 import lombok.RequiredArgsConstructor;
@@ -21,60 +25,34 @@ public class RegionServiceImpl implements RegionService {
 	private final RegionRepository regionRepository;
 
 	@Override
-	public List<RegionDTO> readAll() {
-		List<Region> regions = regionRepository.findAll();
-		return regions.stream().map(this::entityToDto).collect(Collectors.toList());
+	@ResponseStatus(HttpStatus.OK)
+	public List<RegionResponseDTO.Read> readAll() {
+		return regionRepository.findAll().stream().map(RegionMapper::entityToDTO).toList();
 	}
 
 	@Override
-	public RegionDTO read(Long id) {
-		Optional<Region> region = regionRepository.findById(id);
-		return region.map(this::entityToDto).orElseThrow(PlanError.NOT_FOUND::getException);
+	@ResponseStatus(HttpStatus.OK)
+	public RegionResponseDTO read(String regionName) {
+		return regionRepository.findByRegionName(regionName);
 	}
 
 	@Override
-	public RegionDTO register(RegionDTO regionDTO) {
-		Region region = dtoToEntity(regionDTO);
-		region = regionRepository.save(region);
-		return entityToDto(region);
+	public void create(Authentication authentication, RegionRequestDTO.Create regionRequestDTO) {
+		regionRepository.save(RegionMapper.dtoToEntity(regionRequestDTO));
 	}
 
 	@Override
-	public RegionDTO update(RegionDTO regionDTO) {
-		Optional<Region> updateRegion = regionRepository.findById(regionDTO.getId());
+	public RegionRequestDTO.Create update(RegionRequestDTO.Create regionRequestDTO) {
+		Optional<Region> updateRegion = regionRepository.findById(regionRequestDTO.getId());
 		Region region = updateRegion.orElseThrow(PlanError.NOT_FOUND::getException);
 
 		regionRepository.save(region);
-		return entityToDto(region);
+		return null;
 	}
 
 	@Override
 	public void delete(Long id) {
 		Region region = regionRepository.findById(id).orElseThrow(PlanError.NOT_FOUND::getException);
 		regionRepository.delete(region);
-	}
-
-	@Override
-	public Optional<Region> findByRegionName(String regionName) {
-		return regionRepository.findByRegionName(regionName);
-	}
-
-	@Override
-	public boolean existsByRegionName(String regionName) {
-		return regionRepository.existsByRegionName(regionName);
-	}
-
-	private RegionDTO entityToDto(Region region) {
-		return RegionDTO.builder()
-			.id(region.getId())
-			.name(region.getRegionName())
-			.build();
-	}
-
-	private Region dtoToEntity(RegionDTO regionDTO) {
-		return Region.builder()
-			.id(regionDTO.getId())
-			.regionName(regionDTO.getName())
-			.build();
 	}
 }
